--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,32 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/fragmentChatList">
+    app:startDestination="@id/fragmentCityList">
 
     <fragment
-        android:id="@+id/fragmentChatList"
-        android:name="com.sriyank.globochat.ChatListFragment"
-        android:label="Chats"
-        tools:layout="@layout/fragment_chat_list" >
-        <action
-            android:id="@+id/action_chatList_to_settings"
-            app:destination="@id/fragmentSettings" />
-    </fragment>
+        android:id="@+id/fragmentCityList"
+        android:name="com.sriyank.globochat.city.CityListFragment"
+        android:label="@string/top_cities"
+        tools:layout="@layout/fragment_city_list" />
 
     <fragment
-        android:id="@+id/fragmentSettings"
-        android:name="com.sriyank.globochat.SettingsFragment"
-        android:label="Settings"
-        tools:layout="@layout/fragment_settings" >
-        <action
-            android:id="@+id/action_settings_to_accSettings"
-            app:destination="@id/fragmentAccSettings" />
-    </fragment>
-
+        android:id="@+id/fragmentFavoriteList"
+        android:name="com.sriyank.globochat.favorite.FavoriteFragment"
+        android:label="@string/favorites"
+        tools:layout="@layout/fragment_favorite" />
     <fragment
-        android:id="@+id/fragmentAccSettings"
-        android:name="com.sriyank.globochat.AccountSettingsFragment"
-        android:label="Account"
-        tools:layout="@layout/fragment_account_settings" />
-
+        android:id="@+id/somethingNew"
+        android:name="com.sriyank.globochat.JayTouchFragment"
+        android:label="KosiTouch"
+        tools:layout="@layout/fragment_jay_touch"/>
 </navigation>
