--- a/app/src/main/res/layout/fragment_city_list.xml
+++ b/app/src/main/res/layout/fragment_city_list.xml
@@ -16,6 +16,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/grid_item_city" />
+        tools:listitem="@layout/list_item_city" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
